day 5 part 2. Still full of debugging code